--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@coreui/icons": "^3.0.1",
+    "@coreui/icons-react": "^2.3.0",
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.9",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.3.17",
     "next": "^14.2.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1"
   },
