--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@coreui/icons-react": "^2.3.0",
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.9",
+    "axios": "^1.7.7",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.3.17",
     "next": "^14.2.5",
